[workspace]
members = [
    "crates/use-electronics",
    "crates/use-component",
    "crates/use-pin",
    "crates/use-package",
    "crates/use-circuit",
    "crates/use-net-label",
    "crates/use-rating",
    "crates/use-resistor",
    "crates/use-capacitor",
    "crates/use-diode",
    "crates/use-transistor",
    "crates/use-board",
]
resolver = "3"

[workspace.package]
authors = ["RustUse Contributors"]
version = "0.0.1"
edition = "2024"
rust-version = "1.95.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RustUse/use-electronics"
homepage = "https://rustuse.org"
readme = "README.md"
publish = false

[workspace.dependencies]
use-board = { version = "0.0.1", path = "crates/use-board" }
use-capacitor = { version = "0.0.1", path = "crates/use-capacitor" }
use-circuit = { version = "0.0.1", path = "crates/use-circuit" }
use-component = { version = "0.0.1", path = "crates/use-component" }
use-diode = { version = "0.0.1", path = "crates/use-diode" }
use-electronics = { version = "0.0.1", path = "crates/use-electronics" }
use-net-label = { version = "0.0.1", path = "crates/use-net-label" }
use-package = { version = "0.0.1", path = "crates/use-package" }
use-pin = { version = "0.0.1", path = "crates/use-pin" }
use-rating = { version = "0.0.1", path = "crates/use-rating" }
use-resistor = { version = "0.0.1", path = "crates/use-resistor" }
use-transistor = { version = "0.0.1", path = "crates/use-transistor" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.metadata.rustuse.release]
publish = false
versioning = "lockstep-0.x"
first-publish-candidates = [
    "use-component",
    "use-pin",
    "use-package",
    "use-net-label",
    "use-rating",
    "use-resistor",
    "use-capacitor",
    "use-diode",
    "use-transistor",
    "use-circuit",
    "use-board",
    "use-electronics",
]
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
expect_used = "warn"
multiple_crate_versions = "allow"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
todo = "deny"
unimplemented = "deny"
unwrap_used = "warn"
