[package]
name = "use-board"
description = "Primitive board-level vocabulary for RustUse electronics crates"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-board"
keywords = ["electronics", "board", "layer", "rustuse"]
categories = ["data-structures"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true