[package]
name = "use-circuit"
description = "Primitive circuit relationship vocabulary for RustUse electronics crates"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-circuit"
keywords = ["electronics", "circuit", "net", "rustuse"]
categories = ["data-structures"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
use-component.workspace = true
use-net-label.workspace = true
use-pin.workspace = true

[lints]
workspace = true