[package]
name = "use-component"
description = "Primitive electronic component identity and classification for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-component"
keywords = ["electronics", "component", "parts", "rustuse"]
categories = ["data-structures"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true