[package]
name = "use-net-label"
description = "Primitive electronic net label vocabulary for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-net-label"
keywords = ["electronics", "net", "signal", "rustuse"]
categories = ["data-structures"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true