[package]
name = "use-package"
description = "Primitive electronic package vocabulary for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-package"
keywords = ["electronics", "package", "footprint", "rustuse"]
categories = ["data-structures"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true