[package]
name = "use-transistor"
description = "Primitive transistor vocabulary for RustUse electronics crates"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-transistor"
keywords = ["electronics", "transistor", "bjt", "fet", "rustuse"]
categories = ["data-structures"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true